--- a/core/template/dashboard/cmd.info.binary.tmplimg.html
+++ b/core/template/dashboard/cmd.info.binary.tmplimg.html
@@ -8,12 +8,18 @@
   <div class="value">
     <span class="timeCmd label label-default #history#" data-type="info"></span>
   </div>
-  <template></template>
+  <template>
+    <div>time : date ({{Affiche l'info time sous forme de date}})</div>
+  </template>
   <script>
     jeedom.cmd.update['#id#'] =function(_options) {
       var cmd = $('.cmd[data-cmd_id=#id#]')
       if ('#_time_widget_#' == '1') {
-        jeedom.cmd.displayDuration(_options.valueDate,  cmd.find('.timeCmd'))
+        if ('#time#' == 'date') {
+          jeedom.cmd.displayDuration(_options.valueDate, cmd.find('.timeCmd'), 'date')
+        } else {
+          jeedom.cmd.displayDuration(_options.valueDate, cmd.find('.timeCmd'))
+        }
       } else {
         cmd.find('.timeCmd').parent().remove()
       }
