--- a/core/template/dashboard/cmd.info.string.tmplmultistate.html
+++ b/core/template/dashboard/cmd.info.string.tmplmultistate.html
@@ -1,58 +1,64 @@
-<div class="cmd cmd-widget #history#" data-type="info" data-subtype="numeric" data-template="tmplmultistate" data-cmd_id="#id#" data-cmd_uid="#uid#" data-version="#version#" data-eqLogic_id="#eqLogic_id#">
-	<div class="title #hide_name#">
-		<div  class="cmdName">#name_display#</div>
-	</div>
-	<div class="content-sm">
-		<span class="iconCmd"></span>
-	</div>
-	<div class="value">
-		<span class="timeCmd label label-default #history#" data-type="info"></span>
-	</div>
-	<template></template>
-	<script>
-		jeedom.cmd.update['#id#'] = function(_options) {
-			var cmd = $('.cmd[data-cmd_id=#id#]')
-			if ('#_time_widget_#' == '1') {
-				jeedom.cmd.displayDuration(_options.valueDate,  cmd.find('.timeCmd'))
-			} else {
-				cmd.find('.timeCmd').parent().remove()
-			}
+<div class="cmd cmd-widget #history#" data-type="info" data-subtype="string" data-template="tmplmultistate" data-cmd_id="#id#" data-cmd_uid="#uid#" data-version="#version#" data-eqLogic_id="#eqLogic_id#">
+  <div class="title #hide_name#">
+    <div  class="cmdName">#name_display#</div>
+  </div>
+  <div class="content-sm">
+    <span class="iconCmd"></span>
+  </div>
+  <div class="value">
+    <span class="timeCmd label label-default #history#" data-type="info"></span>
+  </div>
+  <template>
+      <div>time : date ({{Affiche l'info time sous forme de date}})</div>
+    </template>
+  <script>
+    jeedom.cmd.update['#id#'] = function(_options) {
+      var cmd = $('.cmd[data-cmd_id=#id#]')
+      if ('#_time_widget_#' == '1') {
+        if ('#time#' == 'date') {
+          jeedom.cmd.displayDuration(_options.valueDate, cmd.find('.timeCmd'), 'date')
+        } else {
+          jeedom.cmd.displayDuration(_options.valueDate, cmd.find('.timeCmd'))
+        }
+      } else {
+        cmd.find('.timeCmd').parent().remove()
+      }
 
-			cmd.attr('title', '{{Date de valeur}} : '+_options.valueDate+'<br/>{{Date de collecte}} : '+_options.collectDate+'<br/>{{Valeur}} : '+_options.display_value+'#unite#')
+      cmd.attr('title', '{{Date de valeur}} : '+_options.valueDate+'<br/>{{Date de collecte}} : '+_options.collectDate+'<br/>{{Valeur}} : '+_options.display_value+'#unite#')
 
-			try {
-				var state = ''
-				#test#
-				cmd.find('.iconCmd').empty().append(state)
-			} catch (error) {
-				console.log(error)
-			}
+      try {
+        var state = ''
+        #test#
+        cmd.find('.iconCmd').empty().append(state)
+      } catch (error) {
+        console.log(error)
+      }
 
-			var style = ''
-			if (!isNaN('#_desktop_width_#')) {
-				style = 'width:#_desktop_width_#px !important;'
-			}
-			cmd.find('.iconCmd img').attr('style',style)
+      var style = ''
+      if (!isNaN('#_desktop_width_#')) {
+        style = 'width:#_desktop_width_#px !important;'
+      }
+      cmd.find('.iconCmd img').attr('style',style)
 
-			cmd.off('changeThemeEventCmd').on('changeThemeEventCmd',function (event, theme) {
-				var state = ''
-				#change_theme#
-				if (state != '') {
-					cmd.find('.iconCmd').empty().append(state);
-				}
-				var style = ''
-				if (!isNaN('#_desktop_width_#')) {
-					style = 'width:#_desktop_width_#px !important;'
-				}
-				cmd.find('.iconCmd img').attr('style',style)
-			})
-		}
+      cmd.off('changeThemeEventCmd').on('changeThemeEventCmd',function (event, theme) {
+        var state = ''
+        #change_theme#
+        if (state != '') {
+          cmd.find('.iconCmd').empty().append(state);
+        }
+        var style = ''
+        if (!isNaN('#_desktop_width_#')) {
+          style = 'width:#_desktop_width_#px !important;'
+        }
+        cmd.find('.iconCmd img').attr('style',style)
+      })
+    }
 
-		jeedom.cmd.update['#id#']({display_value: '#state#', valueDate: '#valueDate#', collectDate: '#collectDate#', alertLevel: '#alertLevel#'})
+    jeedom.cmd.update['#id#']({display_value: '#state#', valueDate: '#valueDate#', collectDate: '#collectDate#', alertLevel: '#alertLevel#'})
 
-		$('body').on('changeThemeEvent', function (event, theme) {
-			$('.cmd[data-cmd_id=#id#]').trigger('changeThemeEventCmd',theme)
-		})
-	</script>
-	<!-- Hide parameters  #_mobile_width_# -->
+    $('body').on('changeThemeEvent', function (event, theme) {
+      $('.cmd[data-cmd_id=#id#]').trigger('changeThemeEventCmd',theme)
+    })
+  </script>
+  <!-- Hide parameters  #_mobile_width_# -->
 </div>
