--- a/core/template/mobile/cmd.action.other.tmplicon.html
+++ b/core/template/mobile/cmd.action.other.tmplicon.html
@@ -8,7 +8,11 @@
     jeedom.cmd.update['#id#'] = function(_options) {
       var cmd#id# = $('.cmd[data-cmd_id=#id#]')
       if ('#_time_widget_#' == '1') {
-        jeedom.cmd.displayDuration(_options.valueDate, cmd#id#.find('.timeCmd'))
+        if ('#time#' == 'date') {
+          jeedom.cmd.displayDuration(_options.valueDate, cmd#id#.find('.timeCmd'), 'date')
+        } else {
+          jeedom.cmd.displayDuration(_options.valueDate, cmd#id#.find('.timeCmd'))
+        }
       } else {
         cmd#id#.find('.timeCmd').remove()
       }
