--- a/core/template/mobile/cmd.action.slider.timeShutter.html
+++ b/core/template/mobile/cmd.action.slider.timeShutter.html
@@ -29,7 +29,11 @@
     }, '.slider')
     jeedom.cmd.update['#id#'] = function(_options) {
       var cmd = $('.cmd[data-cmd_uid=#uid#]')
-      jeedom.cmd.displayDuration(_options.valueDate,  $('.cmd[data-cmd_id=#id#] .timeCmd'))
+      if ('#time#' == 'date') {
+        jeedom.cmd.displayDuration(_options.valueDate, cmd.find('.timeCmd'), 'date')
+      } else {
+        jeedom.cmd.displayDuration(_options.valueDate, cmd.find('.timeCmd'))
+      }
       var height = ((_options.display_value - #minValue#) * 100) / (#maxValue# - #minValue#)
       height = 100 - (Math.round(parseFloat(height) * 10) / 10)
       if ('#invert#' == '1') {
