fix scenario widget inactive

--- a/core/template/dashboard/scenario.html
+++ b/core/template/dashboard/scenario.html
@@ -12,45 +12,46 @@
     </center>
   </div>
   <script>
-    $('.scenario[data-scenario_id=#id#] .changeScenarioState').on('click', function () {
-      $('.scenario[data-scenario_id=#id#] .iconCmd').empty().append('<i class="fa fa-spinner fa-spin"></i>');
+    $('.scenario[data-scenario_id=#id#] .changeScenarioState').on('click', function() {
+      $('.scenario[data-scenario_id=#id#] .iconCmd').empty().append('<i class="fa fa-spinner fa-spin"></i>')
       jeedom.scenario.changeState({
         id: $(this).closest('.scenario').attr('data-scenario_id'),
         state: $(this).attr('data-state'),
         error: function (error) {
-          $('#div_alert').showAlert({message: error.message, level: 'danger'});
-          $('.scenario[data-scenario_id=#id#] .iconCmd').empty().append('<i class="fa fa-times"></i>');
+          $('#div_alert').showAlert({message: error.message, level: 'danger'})
+          $('.scenario[data-scenario_id=#id#] .iconCmd').empty().append('<i class="fa fa-times"></i>')
         }
-      });
-    });
-    jeedom.scenario.update['#id#'] =function(_options){
-      if(typeof _options.icon != 'undefined' && _options.icon != ''){
-        $('.scenario[data-scenario_id=#id#] .iconCmd').empty().append(_options.icon);
+      })
+    })
+
+    jeedom.scenario.update['#id#'] = function(_options) {
+      if (typeof _options.icon != 'undefined' && _options.icon != '') {
+        $('.scenario[data-scenario_id=#id#] .iconCmd').empty().append(_options.icon)
       }
-      $('.scenario[data-scenario_id=#id#] .changeScenarioState').hide();
-      if(!isset(_options.isActive)){
-        _options.isActive = '#isActive#';
+      $('.scenario[data-scenario_id=#id#] .changeScenarioState').hide()
+      if (!isset(_options.isActive)) {
+        _options.isActive = '#isActive#'
       }
-      if(!isset(_options.state)){
-        _options.state = '#state#';
+      if (!isset(_options.state)) {
+        _options.state = '#state#'
       }
       if (typeof _options.isActive == 'undefined' || _options.isActive == '1') {
-        $('.scenario[data-scenario_id=#id#]').removeClass('disabled');
+        $('.scenario[data-scenario_id=#id#]').removeClass('inactive')
         if (_options.state == 'in progress' || _options.state == 'starting') {
-          $('.scenario[data-scenario_id=#id#] .iconCmd').empty().append('<i class="fa fa-spinner fa-spin"></i>');
-          $('.scenario[data-scenario_id=#id#] .changeScenarioState[data-state=stop]').show();
-          $('.scenario[data-scenario_id=#id#] .changeScenarioState[data-state=deactivate]').show();
-        }else{
-          $('.scenario[data-scenario_id=#id#] .iconCmd').empty().append('#icon#');
-          $('.scenario[data-scenario_id=#id#] .changeScenarioState[data-state=start]').show();
-          $('.scenario[data-scenario_id=#id#] .changeScenarioState[data-state=deactivate]').show();
+          $('.scenario[data-scenario_id=#id#] .iconCmd').empty().append('<i class="fa fa-spinner fa-spin"></i>')
+          $('.scenario[data-scenario_id=#id#] .changeScenarioState[data-state=stop]').show()
+          $('.scenario[data-scenario_id=#id#] .changeScenarioState[data-state=deactivate]').show()
+        } else {
+          $('.scenario[data-scenario_id=#id#] .iconCmd').empty().append('#icon#')
+          $('.scenario[data-scenario_id=#id#] .changeScenarioState[data-state=start]').show()
+          $('.scenario[data-scenario_id=#id#] .changeScenarioState[data-state=deactivate]').show()
         }
       } else {
-        $('.scenario[data-scenario_id=#id#] .iconCmd').empty().append('#icon#');
-        $('.scenario[data-scenario_id=#id#] .changeScenarioState[data-state=activate]').show();
-        $('.scenario[data-scenario_id=#id#]').addClass('disabled');
+        $('.scenario[data-scenario_id=#id#] .iconCmd').empty().append('#icon#')
+        $('.scenario[data-scenario_id=#id#] .changeScenarioState[data-state=activate]').show()
+        $('.scenario[data-scenario_id=#id#]').addClass('inactive')
       }
     }
-    jeedom.scenario.update['#id#']({isActive:'#isActive#',state:'#state#',lastLaunch:'#lastLaunch#',icon:'#icon#'});
+    jeedom.scenario.update['#id#']({isActive: '#isActive#', state: '#state#', lastLaunch: '#lastLaunch#', icon: '#icon#'})
   </script>
 </div>
