--- a/desktop/css/coreWidgets.css
+++ b/desktop/css/coreWidgets.css
@@ -308,8 +308,7 @@ Desktop
     float: right;
     width: 40px;
     height: 20px;
-    bottom: 3px;
-    margin-bottom: -5px;
+    top: 2px;
   }
   .content-xs:not(.widthx2) label.binarySwitch {
     margin-left: 47px !important;
