fix mobile --cat-opening-color

--- a/core/themes/core2019_Legacy/mobile/colors.css
+++ b/core/themes/core2019_Legacy/mobile/colors.css
@@ -41,6 +41,7 @@ colors Legacy Mobile
   --cat-heating-color: 41, 128, 185;
   --cat-automatism-color: 128, 128, 128;
   --cat-light-color: 243, 156, 18;
+  --cat-opening-color: 100, 100, 100;
   --cat-multimedia-color: 52, 73, 94;
   --cat-energy-color: 46, 176, 75;
   --cat-other-color: 25, 188, 156;
