--- a/core/themes/core2019_Legacy/mobile/core2019_Legacy.css
+++ b/core/themes/core2019_Legacy/mobile/core2019_Legacy.css
@@ -60,6 +60,9 @@ Mobile Legacy
 .eqLogic.eqLogic-widget[data-category=energy] .ui-btn {
   background-color: var(--cat-energy-BtnColor) !important;
 }
+.eqLogic.eqLogic-widget[data-category=""] .ui-btn {
+  background-color: var(--cat-other-BtnColor) !important;
+}
 
 .scenario-widget.scenario .changeScenarioState,
 .scenario-widget.scenario .changeScenarioState i {
@@ -161,8 +164,8 @@ p.state,
 
 .hgauge-value,
 .vgauge-value,
-.shuttergauge-value{
-  background: var(--linkHoverLight-color) !important;
+.shuttergauge-value {
+  background: var(--linkHoverLight-color);
 }
 
 .tableCmd,
